--- a/style.css
+++ b/style.css
@@ -53,9 +53,9 @@ nav {
 }
 
 
-.headerSignup {
+header .headerSignup {
 position: absolute;
-margin-left: -140px;
+margin-left: -130px;
 left: 100%;
 top: 0;
 margin-top: 60px;
@@ -72,17 +72,20 @@ font-weight: bold;
 
 
 button {
-	background-color: #0065FC;
-	color: white;
-	height: 50px;
-	width: 140px;
-	margin-left: -5px;
-	border-radius: 0px 15px 15px 0px;
-	border-style: none;
-	font-size: 15px;
-	font-weight: bold;
+    background-color: #0065FC;
+    color: white;
+    height: 48.9px;
+    width: 140px;
+    margin-left: -6px;
+    border-radius: 0px 15px 15px 0px;
+    border-style: none;
+    font-size: 15px;
 }
 
+button span {
+	font-family: "Raleway", sans-serif; 
+	font-weight: bolds;
+}
 .recherche {
 	margin-top: 30px;
 	margin-bottom: 30px;
@@ -91,21 +94,23 @@ button {
 .recherche input {
 height: 50px;
 width: 220px;
-border: 1px solid #d9dcdd;
+border-top: 2px solid #F2F2F2;
+border-bottom: 2px solid #F2F2F2;
+border-left: 0px;
+border-right: 0px;
 font-weight: bold;
 text-align: center;
 font-size: large;
 }
 
 .recherche i {
-	background-color: #F2F2F2;
-	height: 51px;
-	width: 50px;
-	padding: 17.5px;
-	margin-right: -5px;
-	border-radius: 15px 0px 0px 15px;
-
-	text-align: center;
+    background-color: #F2F2F2;
+    height: 50px;
+    width: 50px;
+    padding: 17px;
+    margin-right: -5px;
+    border-radius: 15px 0px 0px 15px;
+    text-align: center;
 }
 
 
@@ -134,7 +139,7 @@ font-size: large;
 	display: flex;
 	margin-top: 30px;
 	margin-bottom: 30px;
-
+	font-size: large;
     display: flex;
     align-items: center;
 
@@ -142,12 +147,11 @@ font-size: large;
 }
 .filtresflex div {
 	display: flex;
-	margin-right: 30px;
+	margin-right: 25px;
 	margin-bottom: 10px;
 	margin-top: 10px;
 	border: 2px solid #d9dcdd;
 	border-radius: 50px;
-
 	align-items: center;
 	
 }
@@ -163,21 +167,19 @@ font-size: large;
 
 
 
-span {
+span:not(#search){
 	
     border-radius: 50%;
-    padding: 20px;
+    padding: 18px;
 	color: #0065FC;
 	background-color: #deebff;
 	
-	min-height: 3.5rem;
-    min-width: 3.5rem;
+	min-height: 3.3rem;
+    min-width: 3.3rem;
     height: 3rem;
     width: 3rem;
     display: inline-block;
     margin: -2px;
-
-    
 
 }
 
@@ -208,6 +210,11 @@ span i {
 	justify-content: space-between;
 	margin:30px;
 	margin-bottom: 0px;
+	align-items: center;
+}
+
+.gauchetitre i {
+
 }
 
 
@@ -253,6 +260,9 @@ span i {
   border-radius: 13px;
   box-shadow:  0px 0px 10px  grey ;
 }
+
+.image:hover  { transform: scale(1.1);      }
+
 .image img{
   width:239px;
   height: 110px;
@@ -278,8 +288,9 @@ span i {
   border: 5px  solid white;
   box-shadow:  0px 0px 10px  #c3c8cb ;
   border-radius: 13px;
-
 }
+
+.image2:hover  { transform: scale(1.1);      }
 
 
 .image2 img{
@@ -329,6 +340,7 @@ h1 {
 }
 
 .block2titre {
+	
 	margin:30px;
 	margin-left: 0px;
 }
@@ -429,22 +441,43 @@ footer {
  	
  }
 
+
+@media only screen and (min-width:500px) {
+.fas.fa-search::before {
+	content:"";
+}
+}
+
+
+
+
+
+
+/* ...............................DEBUT POUR TELEPHONE..................................*/
+
+
  @media screen and (max-width:500px){
 
  	#marge {
-	padding-right: 5px;
-    padding-left: 5px;
-}
+		padding-right: 10px;
+	    padding-left: 10px;
+	}
+
+	span#search{
+		display:none;
+	}
 
 	#header { 
 		display: block;
 		width: 100%;
-		
-		 }
+	}
+
+	#headerImg {
+    margin-bottom: 0px;
+	}
 
 	h1 {
-		color: red;
-		font-size: 15px;
+		font-size: 25px;
 		width: 100%;
 	}
 		.headerNavLink {
@@ -459,21 +492,24 @@ footer {
 		margin-top: 0px;
 	}
 
-
+	#headerNav {
+    margin-bottom: 105px;
+    margin-top: -30px;
+}
 
 	.headerNavLink[data-active="true"] {
 		border-top: 0px ;
-		border-bottom: 2px solid green;
+		border-bottom: 3px solid #0065FC;
 		width: 50%;
 		float: left;
+		padding-top: 0px;
 
 	}
 
 	.headerNavLink[data-active="false"] {
-		border-bottom: 2px solid grey;
+		border-bottom: 3px solid #F2F2F2;
 		width: 50%;
 		float: right;
-		margin-bottom: 50px;
 
 		
 	}
@@ -490,11 +526,22 @@ footer {
 		display: flex;
 	}
 
-	button {
-		
+	.recherche input {
+    height: auto;
+    width: auto;
 	}	
 
+	button {
+    width: 50px;
+    border-radius: 15px;
+    margin-left: -10px;
+}	
 
+	.filtresflex h3 {
+		display: flex;
+		flex-wrap: wrap;
+		    width: 100%;
+	}
 
 	.filtresflex {
 		display: flex;
@@ -502,8 +549,23 @@ footer {
 	}
 
 	.filtresflex div {
-			display: flex;
+		display: flex;
 		flex-wrap: wrap;
+		margin-bottom: 5px;
+		margin-right: 10px;
+	}
+
+	span {
+		padding: 15px;
+		min-height: 3rem;
+		min-width: 3rem;
+	}
+
+
+	.information i {
+	    width: 40px;
+	    margin-right: 0rem;
+	   
 	}
 
 	#selection{
@@ -511,7 +573,116 @@ footer {
 	flex-wrap: wrap;
 	}
 
+	#droite {
+		width: 100%;
+		margin-left: 0px;
+		border-radius: 0px;
+	}
+
+	.image2 {
+		    margin: 15px;
+	}
+
+	#droite i {
+		    text-align: center;
+	}
+
+	#block {
+		justify-content: space-between;
+		background-color: white;
+		width: 100%;
+		padding: 0px;
+
+	}
+
+	.droitep {
+    margin: 0px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
+	#gauche {
+		width: 100%;
+		background-color: white;
+		order: 2;
+	}
+
+	.image {
+		width: 100%;
+		box-shadow: 0px 0px 10px #cacaca;
+		margin-bottom: 3px
+	}
+
+	.image img {
+		width: 100%;
+	}
+
+	.droitetitre {
+    margin: 0px;
+	}
+
+
+
+	#block2 {
+		display: flex;
+		flex-wrap: wrap;
+	}
+
+	#block2 figure{
+	width:100%;
+	 margin: 20px;
+}
+
+#block2 figure figure {
+    margin-bottom: 0px;
+   margin: 0px;
+   margin-bottom: 20px;
+
+}
+
+#object1 {
+	height: 150px;
 	
+}
+
+#object2 {
+	height: 150px;
+}
+
+#object3 {
+	height: 150px;
+}
+
+#object4 {
+	height: 150px;
+}
+
+#object5 {
+	height: 150px;
+}
+
+#object6 {
+	height: 150px;
+}
+
+	
+	footer {
+	display: flex;
+	flex-wrap: wrap;
+	padding: 20px;
+	padding-top: 0px;
+
+	}
+
+	 footer div {
+ 	margin-right: 100px;
+ 	}
+
+ 	.footertext h3 {
+	margin-top: 40px;
+	margin-bottom: 20px;
+}
+
 
  }
 
