--- a/style.css
+++ b/style.css
@@ -1,15 +1,15 @@
-
- * {
+* {
 	margin: 0;
 	padding: 0;
 	box-sizing:border-box;
 }
 
 body {
- background-color: white; 
- font-family: "Raleway", sans-serif; 
+ 	background-color: white; 
+ 	font-family: "Raleway", sans-serif; 
 
 }
+
 #marge {
 	padding-right: 50px;
     padding-left: 50px;
@@ -49,6 +49,7 @@ html, body {
  	padding-top: 50px;
  	color: #0065FC;
 }
+
 .headerNavLink[data-active="false"] {
  	
  	padding-left: 30px;
@@ -57,8 +58,8 @@ html, body {
 }
 
 #activites {
-    margin-right: 104px;
-    }
+   margin-right: 104px;
+ }
 
 nav {
 	
@@ -67,14 +68,13 @@ nav {
 
 
 header .headerSignup {
-position: absolute;
-margin-left: -130px;
-left: 100%;
-top: 0;
-margin-top: 60px;
-color: #0065FC;
-font-weight: bold;
-
+	position: absolute;
+	margin-left: -130px;
+	left: 100%;
+	top: 0;
+	margin-top: 60px;
+	color: #0065FC;
+	font-weight: bold;
 }
 
 .titre {
@@ -85,14 +85,14 @@ font-weight: bold;
 
 
 button {
-    background-color: #0065FC;
-    color: white;
-    height: 48.9px;
-    width: 140px;
-    margin-left: -6px;
-    border-radius: 0px 15px 15px 0px;
-    border-style: none;
-    font-size: 15px;
+   background-color: #0065FC;
+   color: white;
+   height: 48.9px;
+   width: 140px;
+   margin-left: -6px;
+   border-radius: 0px 15px 15px 0px;
+   border-style: none;
+   font-size: 15px;
 }
 
 button span {
@@ -105,25 +105,25 @@ button span {
 }
 
 .recherche input {
-height: 50px;
-width: 220px;
-border-top: 2px solid #F2F2F2;
-border-bottom: 2px solid #F2F2F2;
-border-left: 0px;
-border-right: 0px;
-font-weight: bold;
-text-align: center;
-font-size: large;
+	height: 50px;
+	width: 220px;
+	border-top: 2px solid #F2F2F2;
+	border-bottom: 2px solid #F2F2F2;
+	border-left: 0px;
+	border-right: 0px;
+	font-weight: bold;
+	text-align: center;
+	font-size: large;
 }
 
 .recherche i {
-    background-color: #F2F2F2;
-    height: 50px;
-    width: 50px;
-    padding: 17px;
-    margin-right: -5px;
-    border-radius: 15px 0px 0px 15px;
-    text-align: center;
+   background-color: #F2F2F2;
+   height: 50px;
+   width: 50px;
+   padding: 17px;
+   margin-right: -5px;
+   border-radius: 15px 0px 0px 15px;
+   text-align: center;
 }
 
 
@@ -144,7 +144,7 @@ font-size: large;
 	justify-content: center;
 	align-items: center;
 	margin-right: 1rem;
-	}
+}
 
 
 
@@ -155,9 +155,8 @@ font-size: large;
 	font-size: large;
     display: flex;
     align-items: center;
+ }
 
-
-}
 .filtresflex div {
 	display: flex;
 	margin-right: 25px;
@@ -166,10 +165,9 @@ font-size: large;
 	border: 2px solid #d9dcdd;
 	border-radius: 50px;
 	align-items: center;
-	
 }
 
-.filtresflex div:hover  { transform: scale(1.1); background-color: #deebff69;     }
+.filtresflex div:hover  { transform: scale(1.1); background-color: #deebff69;}
 
 .filtresflex h3 {
 	margin-right: 30px;
@@ -183,18 +181,16 @@ font-size: large;
 
 
 span:not(#search){
-	
-    border-radius: 50%;
-    padding: 18px;
+   border-radius: 50%;
+   padding: 18px;
 	color: #0065FC;
 	background-color: #deebff;
-	
 	min-height: 3.3rem;
-    min-width: 3.3rem;
-    height: 3rem;
-    width: 3rem;
-    display: inline-block;
-    margin: -2px;
+   min-width: 3.3rem;
+   height: 3rem;
+   width: 3rem;
+   display: inline-block;
+   margin: -2px;
 
 }
 
@@ -202,22 +198,18 @@ span i {
 	margin-right: -5px;
 }
 
-
-
 #selection{
 	display:flex;
 
 }
 
 #gauche {
-
 	width: 70%;
 	height: 100%;
 	float: left;
 	background-color: #F2F2F2;
 	border-radius: 25px;
 	padding: 10px;
-	
 }
 
 .gauchetitre {
@@ -229,10 +221,7 @@ span i {
 }
 
 .gauchetitre i {
-
 }
-
-
 
 #droite {
 	width: 33%;
@@ -242,11 +231,9 @@ span i {
 	border: 5px;
 	margin-left: 30px;
 	border-radius: 25px;
-	
 }
 
 .droitetitre {
-	
 	margin:30px;
 	margin-bottom: 0px;
 }
@@ -265,7 +252,6 @@ span i {
 }
 
 .image{
-
   background-color:white;
   margin-top: 13px;
   margin-bottom: 19.5px;
@@ -276,21 +262,20 @@ span i {
   box-shadow:  0px 0px 10px  grey ;
 }
 
-.image:hover  { transform: scale(1.1);      }
+.image:hover  { transform: scale(1.1);}
 
 .image img{
   width:239px;
   height: 110px;
   border-radius: 10px 10px 0px 0px;
   object-fit: cover;
-
-
 }
 
 
 .hostingMainCardGradeIcon[data-active=true] {
     color: #0065FC;
 }
+
 .hostingMainCardGradeIcon[data-active=false] {
     color: #d9dcdd;
 }
@@ -305,7 +290,7 @@ span i {
   border-radius: 13px;
 }
 
-.image2:hover  { transform: scale(1.1);      }
+.image2:hover  { transform: scale(1.1);}
 
 
 .image2 img{
@@ -314,8 +299,6 @@ span i {
   border: 10px;
   object-fit: cover;
   border-radius: 10px 0px 0px 10px; 
- 
-
 }
 
 
@@ -323,22 +306,16 @@ span i {
 	display:flex;
 	flex-direction: column;
 	margin: 10px;
-	
-	
 }
+
 .etoilegauche {
 	display:flex;
 	flex: 1;
 	align-items: flex-end;
-	
 }
- 
-
-
 
 .text {
 	margin: 10px;
-	
 }
 
 h1 {
@@ -346,18 +323,16 @@ h1 {
 }
 
 
-
-
+/* ...............................BLOCK 2..................................*/
 #block2 {
 	display:flex;
 	width:100%;
 	justify-content: space-between;
 }
 
-#block2 figure:hover  { transform: scale(1.1);      }
+#block2 figure:hover  { transform: scale(1.1);}
 
 .block2titre {
-	
 	margin:30px;
 	margin-left: 0px;
 }
@@ -371,7 +346,6 @@ h1 {
 	margin-bottom: 44px;
 	border-radius: 10px;
 	box-shadow:  0px 0px 10px  #c3c8cb ;
-
 }
 
 .object{
@@ -383,7 +357,6 @@ h1 {
 	object-fit: cover;
 	border-radius: 10px 10px 0px 0px;
 	box-shadow:  0px 0px 10px  #c3c8cb ;
-	
 }
 
 #object2 {
@@ -417,8 +390,6 @@ h1 {
 	border-radius: 10px 10px 0px 0px;
 }
 
-
-
 figcaption {
 	padding: 13px;
 	background-color: white;
@@ -426,8 +397,7 @@ figcaption {
 	box-shadow:  0px 0px 10px  #c3c8cb ;
 	position: relative;
 	z-index: 2;
-    margin-top: -5px;
-
+   margin-top: -5px;
 }
 
 
@@ -435,7 +405,6 @@ footer {
 	display: flex;
 	background-color: #F2F2F2;
 	padding: 50px;
-
 }
 
 
@@ -455,8 +424,7 @@ footer {
  a {
  	text-decoration: none;
  	color: black;
- 	
- }
+}
 
 
 @media only screen and (min-width:500px) {
@@ -464,20 +432,14 @@ footer {
 	content:"";
 }
 }
-
-
-
-
-
-
 /* ...............................DEBUT POUR TELEPHONE..................................*/
 
 
- @media screen and (max-width:500px){
+@media screen and (max-width:500px){
 
  	#marge {
 		padding-right: 10px;
-	    padding-left: 10px;
+	   padding-left: 10px;
 	}
 
 	span#search{
@@ -490,7 +452,7 @@ footer {
 	}
 
 	#headerImg {
-    margin-bottom: 0px;
+    	margin-bottom: 0px;
 	}
 
 	h1 {
@@ -501,7 +463,6 @@ footer {
 		margin-right: 0px;
 	 	margin-left: 0px;
 	 	text-align: center;
-
 	}
 
 	nav {
@@ -510,9 +471,9 @@ footer {
 	}
 
 	#headerNav {
-    margin-bottom: 105px;
-    margin-top: -30px;
-}
+    	margin-bottom: 105px;
+    	margin-top: -30px;
+   }
 
 	.headerNavLink[data-active="true"] {
 		border-top: 0px ;
@@ -520,17 +481,13 @@ footer {
 		width: 50%;
 		float: left;
 		padding-top: 0px;
-
 	}
 
 	.headerNavLink[data-active="false"] {
 		border-bottom: 3px solid #F2F2F2;
 		width: 50%;
 		float: right;
-
-		
 	}
-
 
 	.titre {
 		display: block;
@@ -538,26 +495,25 @@ footer {
 		margin-top: 0px;
 	}
 
-
 	.recherche {
 		display: flex;
 	}
 
 	.recherche input {
-    height: auto;
-    width: auto;
+    	height: auto;
+    	width: auto;
 	}	
 
 	button {
-    width: 50px;
-    border-radius: 15px;
-    margin-left: -10px;
-}	
+   	width: 50px;
+   	border-radius: 15px;
+   	margin-left: -10px;
+ 	}	
 
 	.filtresflex h3 {
 		display: flex;
 		flex-wrap: wrap;
-		    width: 100%;
+		width: 100%;
 	}
 
 	.filtresflex {
@@ -580,14 +536,13 @@ footer {
 
 
 	.information i {
-	    width: 40px;
-	    margin-right: 0rem;
-	   
+	   width: 40px;
+	   margin-right: 0rem;
 	}
 
 	#selection{
-	display:flex;
-	flex-wrap: wrap;
+		display:flex;
+		flex-wrap: wrap;
 	}
 
 	#droite {
@@ -597,11 +552,11 @@ footer {
 	}
 
 	.image2 {
-		    margin: 15px;
+	   margin: 15px;
 	}
 
 	#droite i {
-		    text-align: center;
+	   text-align: center;
 	}
 
 	#block {
@@ -609,13 +564,12 @@ footer {
 		background-color: white;
 		width: 100%;
 		padding: 0px;
-
 	}
 
 	.droitep {
-    margin: 0px;
-    margin-top: 20px;
-    margin-bottom: 20px;
+    	margin: 0px;
+    	margin-top: 20px;
+  	   margin-bottom: 20px;
 }
 
 	#gauche {
@@ -635,10 +589,10 @@ footer {
 	}
 
 	.droitetitre {
-    margin: 0px;
+   	margin: 0px;
 	}
 
-
+/* ...............................BLOCK2 PHONE.................................*/
 
 	#block2 {
 		display: flex;
@@ -646,48 +600,45 @@ footer {
 	}
 
 	#block2 figure{
-	width:100%;
-	margin: 20px;
-	margin-top: 10px;
-	margin-bottom: 10px;
+		width:100%;
+		margin: 20px;
+		margin-top: 10px;
+		margin-bottom: 10px;
+	}
 
-}
+	#block2 figure figure {
+	   margin-bottom: 0px;
+	   margin: 0px;
+	   margin-bottom: 20px;
+	}
 
-#block2 figure figure {
-   margin-bottom: 0px;
-   margin: 0px;
-   margin-bottom: 20px;
-}
+	.frioul {
+		margin-bottom: -20px;
+	}
 
-.frioul {
-	margin-bottom: -20px;
-}
+	#object1 {
+		height: 150px;
+	}
 
+	#object2 {
+		height: 150px;
+	}
 
-#object1 {
-	height: 150px;
-	
-}
+	#object3 {
+		height: 150px;
+	}
 
-#object2 {
-	height: 150px;
-}
+	#object4 {
+		height: 150px;
+	}
 
-#object3 {
-	height: 150px;
-}
+	#object5 {
+		height: 150px;
+	}
 
-#object4 {
-	height: 150px;
-}
-
-#object5 {
-	height: 150px;
-}
-
-#object6 {
-	height: 150px;
-}
+	#object6 {
+		height: 150px;
+	}
 
 	
 	footer {
@@ -705,10 +656,10 @@ footer {
  	.footertext h3 {
 	margin-top: 40px;
 	margin-bottom: 20px;
+	}
+
+
 }
-
-
- }
 
 
 
